Fix image scaling, fix chevron alignment, restyle API cards

--- a/app/main.css
+++ b/app/main.css
@@ -60,9 +60,9 @@ header a:hover {
 
 /* API card */
 .api-card {
-	border: ridge rgba(136, 136, 136, 0.2) 3px;
-	border-radius: 20px;
-	box-shadow: 0 0 3px 5px #CCCCCC;
+	border: 1px #CCC;
+	border-top-style: solid;
+	border-bottom-style: solid;
 	margin: 15px 15px;
 }
 
@@ -91,13 +91,12 @@ header a:hover {
 	flex-grow: 1;
 	flex-basis: auto;
 	text-align: center;
-	border-left: 1px solid #CCCCCC;
+	border-left: 1px solid #CCC;
 }
 
 .api-preview {
 	max-width: 40%;
 	margin: 0 0.5em 0 1em;
-	box-shadow: 0 0 1px 2px #D9D9D9;
 	display: inline-block;
 	float: left;
 }
@@ -117,10 +116,10 @@ header a:hover {
 
 /* API list display */
 .api-class{
-	border: ridge rgba(136, 136, 136, 0.2) 3px;
-	border-radius: 20px;
-	box-shadow: 0 0 3px 5px #CCCCCC;
+	border-radius: 10px;
+	box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 10);
 	margin: 15px 0;
+	padding: 0.05em 0;
 }
 
 .api-class > h2 {
@@ -131,12 +130,14 @@ header a:hover {
 	max-width: 1em;
 	display: inline-block;
 	float: left;
-	padding-left: 1em;
-	padding-right: 0.5em;
+	margin: -0.25em 0.5em 0 1em;
 	vertical-align: middle;
 	cursor: pointer;
-	transform-origin: 50% 50%;
 	transition: 0.4s;
+}
+
+.api-card .select-chevron {
+	margin-top: 0.35em;
 }
 
 .select-chevron-expand {
